add build script